--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "imeepos-runnerpro",
+    "name": "meepo-md5",
     "version": "1.0.25",
     "description": "我的ng包描述",
     "main": "./bundles/meepo.umd.js",
@@ -18,15 +18,15 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/meepobrother/imeepos-ng-template.git"
+        "url": "git+https://github.com/meepobrother/meepo-md5.git"
     },
     "keywords": [],
     "author": "imeepos",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/meepobrother/imeepos-ng-template/issues"
+        "url": "https://github.com/meepobrother/meepo-md5/issues"
     },
-    "homepage": "https://github.com/meepobrother/imeepos-ng-template/README.md",
+    "homepage": "https://github.com/meepobrother/meepo-md5/README.md",
     "devDependencies": {
         "@angular/cli": "^1.6.1",
         "@angular/compiler": "^5.1.0",
@@ -56,6 +56,7 @@
         "@nestjs/microservices": "^4.5.1",
         "@nestjs/testing": "^4.5.1",
         "@nestjs/websockets": "^4.5.1",
+        "blueimp-md5": "^2.10.0",
         "mysql": "^2.15.0",
         "reflect-metadata": "^0.1.10",
         "rxjs": "^5.5.5",
